Add COCO annotation files for 2500 images
- Added annotations_2500_20251005_193615.json (8,118 damage annotations, 71MB)
- Added train/val/test split JSON files (train: 1,749 images, val: 374, test: 377)
- Updated .gitignore to allow annotation files
- Critical data for model training

--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,9 @@ data/artifacts/*
 !data/raw/.gitkeep
 !data/artifacts/.gitkeep
 
-# Keep only splits, not full annotations
-data/processed/yolo/batch_output/annotations_*.json
-!data/processed/yolo/batch_output/splits/
+# Keep annotation files (important for training)
+!data/processed/yolo/batch_output/annotations_2500*.json
+!data/processed/yolo/batch_output/splits/*.json
 
 # Exclude images (too large)
 data/processed/yolo/images/
